Fix(): z-index and transitions

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -43,7 +43,7 @@ $alk-green-lighter: rgba(127, 201, 49, 1);
 $alk-yellow-lighter: rgba(246, 220, 0, 1);
 $alk-yellow-darker: rgba(241, 201, 0, 1);
 
-$background-color-grey: #f6f6f6;
+$background-color-grey: #f1f4f3;
 
 $alk-green-hover: rgba($alk-green, .85);
 $alk-green-active: rgba($alk-green, .65);
